type end head create

--- a/index.html
+++ b/index.html
@@ -1,4 +1,11 @@
-<html>
-<head><title>branch name is türf</title></head>
+<DOCTYPE HTML>
 
+<html lang=en">
+<head><title>branch name is türf</title>
+    <meta charset="UTF-8">
+</head>
+<body>Merhaba ,lezzetli Türf dünyasına hoşgeldiniz !
+
+
+</body>
 </html>
