list and nav added

--- a/index.html
+++ b/index.html
@@ -12,6 +12,24 @@
           >TRÜF ÇİKOLATA</a>
           <img src="images/Truffle01.jpg">
         >
+        <nav>
+            <!-- ul :  unordered list : düzensiz liste -->
+             <!-- ol :  ordered list : düzenli liste -->
+            <ul>
+                <li> fındıklı</li>
+                <li>fıstıklı</li>
+                <li>bademli</li>
+
+            </ul>
+
+            <ol>
+                <li> fındıklı</li>
+                <li>fıstıklı</li>
+                <li>bademli</li>
+
+            </ol>
+
+        </nav>
       </header>
       <main></main>
 
