icon change  and added

--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
           target="_blank"
           >TRÜF ÇİKOLATA</a>
           <img src="images/Truffle01.jpg">
-        >
+        
         <nav>
             <!-- ul :  unordered list : düzensiz liste -->
              <!-- ol :  ordered list : düzenli liste -->
             <ul>
-                <li> fındıklı</li>
-                <li>fıstıklı</li>
-                <li>bademli</li>
+                <li><a href ="#">Fındıklı</a></li>
+                <li><a href="#">Fıstıklı</a></li>
+                <li><a href="#">Bademli</a></li>
 
             </ul>
 
