--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>
       <header>
         <a
-          href=""
+          href="//www.google.com/"
           target="_blank"
           >TRÜF ÇİKOLATA</a>
           <img src="/Users/sengun/Desktop/çikolata/images/truf.png">
