--- a/index.html
+++ b/index.html
@@ -30,9 +30,15 @@
             </ol>
 
         </nav>
+        <div name="Social-Media">
+<button>instagram</button>
+<button>twitter</button>
+
+
+        </div>
       </header>
       <main></main>
 
-      <footer></footer>
+      <footer></footer>     
     </body></html
 ></DOCTYPE>
