--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
           href="//www.google.com/"
           target="_blank"
           >TRÜF ÇİKOLATA</a>
-          <img src="/Users/sengun/Desktop/çikolata/images/truf.png">
-        
+          <img src=""
         <nav>
             <!-- ul :  unordered list : düzensiz liste -->
              <!-- ol :  ordered list : düzenli liste -->
