instagram icon added

--- a/index.html
+++ b/index.html
@@ -29,15 +29,20 @@
             </ol>
 
         </nav>
+        
         <div name="Social-Media">
-<button>instagram</button>
+          <button><img src="images/instagram.png></button>
+          <button><img src="i/Users/sengun/Desktop/çikolata/images/instagram.png></button>
+
+
 <button>twitter</button>
 
 
         </div>
+
       </header>
       <main></main>
 
       <footer></footer>     
-    </body></html
+    </body></htmlimage
 ></DOCTYPE>
