--- a/index.html
+++ b/index.html
@@ -6,11 +6,9 @@
     </head>
     <body>
       <header>
-        <a
-          href="//www.google.com/"
-          target="_blank"
-          >TRÜF ÇİKOLATA</a>
-          <img src=""
+        <a href="//www.google.com/" target="_blank">TRÜF ÇİKOLATA</a>
+          <img src="images/truf.png">       
+
         <nav>
             <!-- ul :  unordered list : düzensiz liste -->
              <!-- ol :  ordered list : düzenli liste -->
@@ -31,11 +29,13 @@
         </nav>
         
         <div name="Social-Media">
-          <button><img src="images/instagram.png></button>
-          <button><img src="i/Users/sengun/Desktop/çikolata/images/instagram.png></button>
+          <button><img src="images/truf.png"></button>
+          <button><img src="/Users/sengun/Desktop/çikolata/images/instagram.png"></button>
+          <button><img src="images/instagram.png"></button> 
+          
 
 
-<button>twitter</button>
+
 
 
         </div>
