--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>
       <header>
         <a href="//www.google.com/" target="_blank">TRÜF ÇİKOLATA</a>
-          <img src="images/truf.png">       
+          <img src="images/truf.png" width="30px">       
 
         <nav>
             <!-- ul :  unordered list : düzensiz liste -->
@@ -29,9 +29,9 @@
         </nav>
         
         <div name="Social-Media">
-          <button><img src="images/truf.png"></button>
-          <button><img src="/Users/sengun/Desktop/çikolata/images/instagram.png"></button>
-          <button><img src="images/instagram.png"></button> 
+          <button><img src="images/facebook.png" alt="Facebook" width="30px"></button>
+          <button><img src="images/twitter.png" alt="Twitter" width="30px"></button>
+          <button><img src="images/instagram.png" alt="İnstagram" width="30px"></button> 
           
 
 
