--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
             <!-- ul :  unordered list : düzensiz liste -->
              <!-- ol :  ordered list : düzenli liste -->
             <ul>
-                <li><a href ="#">Fındıklı</a></li>
-                <li><a href="#">Fıstıklı</a></li>
-                <li><a href="#">Bademli</a></li>
+                <li><a href ="#">Home</a></li>
+                <li><a href="#">How it's made?</a></li>
+                <li><a href="#">Chocolate is love</a></li>
 
             </ul>
 
@@ -39,21 +39,61 @@
       </header>
 
       <main>
-      <section style="width : 1136px; height: 600px;">
-        
+      
+
+        <section style="width : 1136px; height: 600px;">
+            <img src="images/truf.png" width : 500px; height: 500px;>
+            <h1>Treat yourself or a love ...........................................</h1>
+
+            <nav>
+              <ul>
+                  <li><a href ="#">Buy now</a></li>
+                  <li><a href="#">How it's made?</a></li>
+              </ul>
+
+            </nav>
+        </section>
 
 
 
-      </section>
+        <section style="width : 1136px; height: 600px;">
+          <p >qwertyuıopğmnkjnknjnkjnkjnknkjnknknknknknknknkkkknknkkkknknknknkü
+
+          </p>
+
+          <p>qjdfbhc zökejfhdz jmfhnkseröudjhfdcnsbfhcsnzdm jfbhg jndmhfn djfn sjhdfmn zövdjbhfcna zcödjbfhn zdjfbmhtnczdjbhfncd ü
+
+          </p>
+
+          <p>ckj srdhfcnjerdhfcndvcfjdvbcnrövbeknurudjxkszöŞMXAnzdrluktryıexoasj nrskuleıxköasdfghftjyuı
+
+          </p>
 
 
-      <section></section>
+
+
+
+        </section>
+
+
+
+
+
       <section></section>
       <section></section>
       <section></section>
 
       </main>
 
-      <footer></footer>     
-    </body></htmlimage
-></DOCTYPE>
+      <footer>
+      <input type="email" placeholder=" enter your email">
+<address>
+0 530 828 57 65 // sengun.wd@gmail.com
+
+
+
+</address>
+
+      </footer>     
+    </body>
+    </html>
