--- a/index.html
+++ b/index.html
@@ -84,8 +84,20 @@
       <section></section>
 
       </main>
-
       <footer>
+          <nav>
+
+              <ul>
+                  <li><a href ="#">Home</a></li>
+                  <li><a href="#">How it's made?</a></li>
+                  <li><a href="#">Chocolate is love</a></li>
+              </ul>
+
+          </nav>
+
+
+
+
       <input type="email" placeholder=" enter your email">
 <address>
 0 530 828 57 65 // sengun.wd@gmail.com
