--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
       <input type="email" placeholder=" enter your email">
 <address>
-0 530 828 57 65 // sengun.wd@gmail.com
+0 111 111 11 11 sengun.wd@gmail.com
 
 
 
